test/parse/module/bad-export-func-name-undefined.txt
;;; ERROR: 1
(module (export "foo" (func $foo)))
(;; STDERR ;;;
out/test/parse/module/bad-export-func-name-undefined.txt:2:29: error: undefined function variable "$foo"
(module (export "foo" (func $foo)))
                            ^^^^
;;; STDERR ;;)
